Update GPTBot Server
